[package]
name = "btc"
version = "0.1.0"
authors = ["Felipe Cetrulo <fecetrulo@hotmail.com>",
"Thiago Machado da Silva <thi@unifei.edu.br>"]

[dependencies]
hex = "0.2.0"
byteorder = "1.1.0"
arrayvec = "0.4.0"
error-chain = "0.11.0"
rust-crypto = "0.2.36"
time = "0.1"
log = "0.3"
env_logger = "0.4.3"
# state_machine_future = "0.1.6"
tokio = "0.1.3"
futures = "0.1.18"